--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,4 +43,12 @@ div.react-datepicker-wrapper {
 
 .react-datepicker {
   width: 100%;
+  opacity: 0;
+  animation: fadeIn 0.3s forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
 }
