--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @import 'react-datepicker/dist/react-datepicker.css';
+@import './datepicker.css';
 
 @tailwind base;
 @tailwind components;
@@ -13,42 +14,4 @@ body {
 
 .font-mono {
   font-family: 'JetBrains Mono', monospace;
-}
-
-.year-picker .react-datepicker__year {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 4px;
-}
-
-.react-datepicker__year-wrapper {
-  display: grid !important;
-  grid-template-columns: repeat(5, minmax(0, 1fr)) !important;
-  justify-items: center;
-  max-width: none !important;
-}
-
-.react-datepicker__year-text {
-  width: 3rem !important;
-  padding: 0.25rem !important;
-}
-
-div.react-datepicker-wrapper {
-  width: 100%;
-}
-
-.react-datepicker-popper {
-  width: 20rem;
-}
-
-.react-datepicker {
-  width: 100%;
-  opacity: 0;
-  animation: fadeIn 0.3s forwards;
-}
-
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-  }
 }
